--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
 /*  your css code here. If applicable */
+h1, h2 {
+    text-align: center;
+}
+li {
+    list-style-type: none;
+    /* border: 2px solid black; */
+}
+a {
+    text-decoration: none;
+}
+body{
+    background-color: rgb(204, 204, 204)
+}
+div {
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 50px;
+    border: 2px solid black;
+    border-radius: 2px 2px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
