--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,6 @@ div {
     border-radius: 2px 2px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
+.player_one, .player_two {
+            background-color: rgb(255, 255, 255);
+        }
